# Deep_Learning_Project

./: .gitignore  README.md  pyproject.toml
Analysis/: efficiency_benchmark.py  embedding_analysis.py
DataLoader/: ClassImbalance.py  DataLoader.py  DataPipeline.py
Models/: ResNetFinetune.py  ViTDistillation.py  ViTFinetune.py
Reports/: Efficiency_comparison.pptx  Final_PPT.pptx  ViT_Distillation.pptx  ViT_Distillation_MinorityClass.pptx  ViT_Distillation_StratifiedData.pptx  ViT_Distillation_embedding_analysis.pptx  ViT_FineTuning_Report_Base.pptx  ViT_Finetuning_Startified_Class_Imbalance.pptx  ViT_vs_ResNet_Finetuning_No_Distillation.pptx
Training/: ClassImbalance.py  DataPipeline.py  DistillationEngine.py  Train_ResNet_GradualUnfreeze.py  Train_ViT_ClassImbalance_GradualUnfreeze.py  Train_ViT_ClassImbalance_LinearProbe.py  Train_ViT_ClassImbalance_SimUnfreeze.py  Train_ViT_Distillation.py  Train_ViT_GradualUnfreeze.py  Train_ViT_LimitedData_GradualUnfreeze.py  Train_ViT_LimitedData_LinearProbe.py  Train_ViT_LimitedData_SimUnfreeze.py  Train_ViT_LinearProbe.py  Train_ViT_SimultaneousUnfreeze.py  TrainingEngine.py  experiments.json  experiments_final_augs.json  umap.py
TrainingScripts/: Train_ResNet_GradualUnfreeze.py  Train_ViT_ClassImbalance_GradualUnfreeze.py  Train_ViT_ClassImbalance_LinearProbe.py  Train_ViT_ClassImbalance_SimUnfreeze.py  Train_ViT_Distillation.py  Train_ViT_GradualUnfreeze.py  Train_ViT_LimitedData_GradualUnfreeze.py  Train_ViT_LimitedData_LinearProbe.py  Train_ViT_LimitedData_SimUnfreeze.py  Train_ViT_LinearProbe.py  (+2 more)
(+1 files in other folders)
